--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ requires-python = ">=3.10"
 dependencies = [
     "asyncio-atexit>=1.0.1",
     "deprecated>=1.2.14",
+    "emoji>=2.14.1",
     "grapheme>=0.6.0",
     "mss>=9.0.2",
     "websockets>=14.0",
