feat: code coverage tracking

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,3 +31,7 @@ jobs:
           ZENDRIVER_TEST_NO_SANDBOX: "true"
         shell: bash
         run: ./scripts/test.sh
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v5
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
