Add github repo to docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,7 +34,6 @@ nav:
           - cast: reference/cdp/cast.md
           - console: reference/cdp/console.md
           - css: reference/cdp/css.md
-          - database: reference/cdp/database.md
           - debugger: reference/cdp/debugger.md
           - device_access: reference/cdp/device_access.md
           - device_orientation: reference/cdp/device_orientation.md
@@ -92,6 +91,8 @@ plugins:
             show_root_toc_entry: false
 site_name: Zendriver
 site_url: https://zendriver.dev
+repo_url: https://github.com/cdpdriver/zendriver
+repo_name: cdpdriver/zendriver
 theme:
   features:
     - navigation.footer
